--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veniam sapiente iure.</p>
     <h3>Fight Club</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est deserunt laborum illo.</p>
-    
+ <!--img-->   
+ <img src="https://picsum.photos/600/300" alt="lorem" title="lorem sol" border="3" align="left">   
+ <img src="image\427-600x300.jpg" alt="my" title="my sağ" border="3" align="right">
+ <br>
+ <!-- map ve area-->
+ <img src="https://www.w3schools.com/html/workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+<br>
+<!-- picture ekran boyutuna göre farklı resimler -->
+<picture>
+    <source srcset="https://image.freepik.com/free-photo/selective-focus-shot-brown-cat-posing-camera_181624-25909.jpg"media="(max-width: 600px)">
+    <source srcset="https://image.freepik.com/free-photo/selective-focus-shot-gray-cat-with-angry-cat-face_181624-13282.jpg"media="(max-width: 1000px)">
+    <img src="https://image.freepik.com/free-photo/white-cat-lies-woman-s-knees_8353-539.jpg" alt="Kedi" />
+</picture>
+
+<map name="workmap">
+  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+  <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
+</map>
 </body>
 </html>
