index.html güncellendi ödev 2

--- a/index.html
+++ b/index.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>İbrahim Faruk İnce</title>
-</head>
-<body>
-    <h1>İbrahim Faruk İnce</h1>
- <h3>Hakkımda</h3>
-    <p>Ben İbrahim FAruk İnce,Sürekli olarak araştırmayı ve kendimi geliştirmeyi seven birisiyim. Sürekli güncellenen yazılım sektöründe, bu yapıya sahip olmadan ayakta kalmanın mümkün olmadığını düşünüyorum.</p>
- <h2>Sevdiğim Filmler</h2>
-    <h3>Prestige</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro velit ab quo!</p>
-    <h3>Beautiful Mind</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veniam sapiente iure.</p>
-    <h3>Fight Club</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est deserunt laborum illo.</p>
- <!--img-->   
- <img src="https://picsum.photos/600/300" alt="lorem" title="lorem sol" border="3" align="left">   
- <img src="image\427-600x300.jpg" alt="my" title="my sağ" border="3" align="right">
- <br>
- <!-- map ve area-->
- <img src="https://www.w3schools.com/html/workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
-<br>
-<!-- picture ekran boyutuna göre farklı resimler -->
-<picture>
-    <source srcset="https://image.freepik.com/free-photo/selective-focus-shot-brown-cat-posing-camera_181624-25909.jpg"media="(max-width: 600px)">
-    <source srcset="https://image.freepik.com/free-photo/selective-focus-shot-gray-cat-with-angry-cat-face_181624-13282.jpg"media="(max-width: 1000px)">
-    <img src="https://image.freepik.com/free-photo/white-cat-lies-woman-s-knees_8353-539.jpg" alt="Kedi" />
-</picture>
 
-<map name="workmap">
-  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
-  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
-  <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
-</map>
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>İbrahim Faruk İnce</title>
+</head>
+
+<body>
+   <div>
+      <div>
+      <h1 id="yukari">İbrahim Faruk İnce</h1>
+      <h3>Hakkımda</h3>
+      <p>Ben İbrahim Faruk İnce,Sürekli olarak araştırmayı ve kendimi geliştirmeyi seven birisiyim. Sürekli güncellenen
+         yazılım sektöründe, bu yapıya sahip olmadan ayakta kalmanın mümkün olmadığını düşünüyorum.</p>
+      </div>
+      <hr>
+      <h3>İlgi Alanlarım</h3>
+      <ol>
+         <li>Film
+            <ul>
+               <li><a href="https://www.imdb.com/title/tt0482571/">Prestige</a></li>
+               <li>Fight Club</li>
+               <li>Beautiful Mind</li>
+            </ul>
+         </li>
+         <li>Kitap
+            <ul>
+               <li><a href="https://www.goodreads.com/book/show/50533743-su-ve-ceza">Suç ve Ceza</a></li>
+               <li>1984</li>
+               <li>Dönüşüm</li>
+            </ul>
+         </li>
+         <li>Dizi
+            <ul>
+               <li>Sherlock Holmes</li>
+               <li>Westworld</li>
+               <li>How I Met Your Mother</li>
+            </ul>
+         </li>
+      </ol>
+      <h2>Sevdiğim Filmler</h2>
+      <h3>Prestige</h3>
+      <img src="https://tr.web.img3.acsta.net/pictures/bzp/01/108998.jpg" alt="prestige img" width="300">
+      <p>Prestij, yönetmenliğini Christopher Nolan'ın yaptığı 2006 ABD-Birleşik Krallık ortak yapımı film.<br>
+         Yazar Christopher Priest'in aynı adlı romanından sinemaya uyarlanan filmin özgün adı The Prestige'dir.</p>
+      <h3>Beautiful Mind</h3>
+      <img src="https://m.media-amazon.com/images/M/MV5BMzcwYWFkYzktZjAzNC00OGY1LWI4YTgtNzc5MzVjMDVmNjY0XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg" alt="Beautiful Mind img" width="300">
+      <p>Akıl Oyunları, Nobel Ekonomi Ödülü sahibi ve Abel Ödülü sahibi Amerikalı matematikçi John Nash'in<br>
+         hayatına dayanan 2001 yapımı bir Amerikan biyografik drama filmidir. Senaryosunu Akiva Goldsman'ın <br>
+         yazdığı filmin yönetmenliğini Ron Howard üstleniyor.</p>
+      <h3>Fight Club</h3>
+      <img src="https://i.pinimg.com/originals/83/89/7e/83897e857be104531da8a2e20e85c5cd.jpg" alt="prestige img" width="300">
+
+
+      <p>Dövüş Kulübü, Chuck Palahniuk tarafından yazılmış aynı isimli romandan uyarlanan kült filmdir.<br>
+         1999 yapımı olan film, David Fincher tarafından yönetilmiştir ve başrollerde Brad Pitt, Edward Norton<br>
+         ve Helena Bonham Carter rol almıştır. Müziklerini Dust Brothers yapmıştır.</p>
+      <a href="#yukari"><button>Yukarı Çık</button></a>
+   </div>   
 </body>
+
 </html>
