--- a/index.html
+++ b/index.html
@@ -11,55 +11,63 @@
 <body>
    <div>
       <div>
-      <h1 id="yukari">İbrahim Faruk İnce</h1>
-      <h3>Hakkımda</h3>
-      <p>Ben İbrahim Faruk İnce,Sürekli olarak araştırmayı ve kendimi geliştirmeyi seven birisiyim. Sürekli güncellenen
-         yazılım sektöründe, bu yapıya sahip olmadan ayakta kalmanın mümkün olmadığını düşünüyorum.</p>
+         <h1 id="yukari">İbrahim Faruk İnce</h1>
+         <h3>Hakkımda</h3>
+         <p>Ben İbrahim Faruk İnce,Sürekli olarak araştırmayı ve kendimi geliştirmeyi seven birisiyim. Sürekli
+            güncellenen
+            yazılım sektöründe, bu yapıya sahip olmadan ayakta kalmanın mümkün olmadığını düşünüyorum.</p>
       </div>
       <hr>
-      <h3>İlgi Alanlarım</h3>
-      <ol>
-         <li>Film
-            <ul>
-               <li><a href="https://www.imdb.com/title/tt0482571/">Prestige</a></li>
-               <li>Fight Club</li>
-               <li>Beautiful Mind</li>
-            </ul>
-         </li>
-         <li>Kitap
-            <ul>
-               <li><a href="https://www.goodreads.com/book/show/50533743-su-ve-ceza">Suç ve Ceza</a></li>
-               <li>1984</li>
-               <li>Dönüşüm</li>
-            </ul>
-         </li>
-         <li>Dizi
-            <ul>
-               <li>Sherlock Holmes</li>
-               <li>Westworld</li>
-               <li>How I Met Your Mother</li>
-            </ul>
-         </li>
-      </ol>
-      <h2>Sevdiğim Filmler</h2>
-      <h3>Prestige</h3>
-      <img src="https://tr.web.img3.acsta.net/pictures/bzp/01/108998.jpg" alt="prestige img" width="300">
-      <p>Prestij, yönetmenliğini Christopher Nolan'ın yaptığı 2006 ABD-Birleşik Krallık ortak yapımı film.<br>
-         Yazar Christopher Priest'in aynı adlı romanından sinemaya uyarlanan filmin özgün adı The Prestige'dir.</p>
-      <h3>Beautiful Mind</h3>
-      <img src="https://m.media-amazon.com/images/M/MV5BMzcwYWFkYzktZjAzNC00OGY1LWI4YTgtNzc5MzVjMDVmNjY0XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg" alt="Beautiful Mind img" width="300">
-      <p>Akıl Oyunları, Nobel Ekonomi Ödülü sahibi ve Abel Ödülü sahibi Amerikalı matematikçi John Nash'in<br>
-         hayatına dayanan 2001 yapımı bir Amerikan biyografik drama filmidir. Senaryosunu Akiva Goldsman'ın <br>
-         yazdığı filmin yönetmenliğini Ron Howard üstleniyor.</p>
-      <h3>Fight Club</h3>
-      <img src="https://i.pinimg.com/originals/83/89/7e/83897e857be104531da8a2e20e85c5cd.jpg" alt="prestige img" width="300">
+      <div>
+         <h3>İlgi Alanlarım</h3>
+         <ol>
+            <li>Film
+               <ul>
+                  <li><a href="https://www.imdb.com/title/tt0482571/">Prestige</a></li>
+                  <li>Fight Club</li>
+                  <li>Beautiful Mind</li>
+               </ul>
+            </li>
+            <li>Kitap
+               <ul>
+                  <li><a href="https://www.goodreads.com/book/show/50533743-su-ve-ceza">Suç ve Ceza</a></li>
+                  <li>1984</li>
+                  <li>Dönüşüm</li>
+               </ul>
+            </li>
+            <li>Dizi
+               <ul>
+                  <li>Sherlock Holmes</li>
+                  <li>Westworld</li>
+                  <li>How I Met Your Mother</li>
+               </ul>
+            </li>
+         </ol>
+      </div>
+      <div>
+         <h2>Sevdiğim Filmler</h2>
+         <h3>Prestige</h3>
+         <img src="https://tr.web.img3.acsta.net/pictures/bzp/01/108998.jpg" alt="prestige img" width="300">
+         <p>Prestij, yönetmenliğini <span style="color:red">Christopher Nolan</span>'ın yaptığı 2006 ABD-Birleşik Krallık ortak yapımı film.<br>
+            Yazar Christopher Priest'in aynı adlı romanından sinemaya uyarlanan filmin özgün adı The Prestige'dir.</p>
+         <h3>Beautiful Mind</h3>
+         <img
+            src="https://m.media-amazon.com/images/M/MV5BMzcwYWFkYzktZjAzNC00OGY1LWI4YTgtNzc5MzVjMDVmNjY0XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"
+            alt="Beautiful Mind img" width="300">
+         <p>Akıl Oyunları, Nobel Ekonomi Ödülü sahibi ve Abel Ödülü sahibi Amerikalı matematikçi John Nash'in<br>
+            hayatına dayanan 2001 yapımı bir Amerikan biyografik drama filmidir. Senaryosunu Akiva Goldsman'ın <br>
+            yazdığı filmin yönetmenliğini <span style="color:red">Ron Howard</span> üstleniyor.</p>
+         <h3>Fight Club</h3>
+         <img src="https://i.pinimg.com/originals/83/89/7e/83897e857be104531da8a2e20e85c5cd.jpg" alt="prestige img"
+            width="300">
 
 
-      <p>Dövüş Kulübü, Chuck Palahniuk tarafından yazılmış aynı isimli romandan uyarlanan kült filmdir.<br>
-         1999 yapımı olan film, David Fincher tarafından yönetilmiştir ve başrollerde Brad Pitt, Edward Norton<br>
-         ve Helena Bonham Carter rol almıştır. Müziklerini Dust Brothers yapmıştır.</p>
-      <a href="#yukari"><button>Yukarı Çık</button></a>
-   </div>   
+         <p>Dövüş Kulübü, <span style="color:red">Chuck Palahniuk</span> tarafından yazılmış aynı isimli romandan uyarlanan kült filmdir.<br>
+            1999 yapımı olan film, <span style="color:red">David Fincher</span> tarafından yönetilmiştir ve başrollerde Brad Pitt, Edward Norton<br>
+            ve Helena Bonham Carter rol almıştır. Müziklerini Dust Brothers yapmıştır.</p>
+         <a href="#yukari"><button>Yukarı Çık</button></a>
+      </div>
+   </div>
 </body>
 
 </html>
